Small optimisation on recent and nearby station fetching, just fetch updates to these, not all stations, after a journey search